[gd_scene load_steps=12 format=1]

[ext_resource path="res://CommonScenes/MainMenu/MainMenuScreen.gd" type="Script" id=1]
[ext_resource path="res://CommonScenes/Buttons/PureText.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/OrbitronMedium30.fnt" type="BitmapFont" id=3]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=4]
[ext_resource path="res://CommonScenes/LoadingScreen/pngs/Logo.png" type="Texture" id=5]
[ext_resource path="res://Fonts/OrbitronBold30.fnt" type="BitmapFont" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="MainMenuScreen" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )
options_path = "res://CommonScenes/OptionsMenu/OptionsMenuScreen.tscn"
game_path = "res://JetpackGameMode/JetpackGame.tscn"

[node name="MenuContainer" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 705.0
margin/top = 492.0
margin/right = 1214.0
margin/bottom = 948.0

[node name="Continue" type="Button" parent="MenuContainer"]

anchor/right = 1
rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../QuitGame")
focus_neighbour/bottom = NodePath("../NewGame")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 171.0
margin/bottom = 43.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false
script/script = ExtResource( 4 )

[node name="NewGame" type="Button" parent="MenuContainer"]

anchor/right = 1
rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../Continue")
focus_neighbour/bottom = NodePath("../ArcadeMode")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 76.0
margin/right = 171.0
margin/bottom = 119.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false
script/script = ExtResource( 4 )

[node name="ArcadeMode" type="Button" parent="MenuContainer"]

anchor/right = 1
rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../NewGame")
focus_neighbour/bottom = NodePath("../SpeedrunMode")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 152.0
margin/right = 171.0
margin/bottom = 195.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.283842, 0.265869, 0.34375, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Arcade Mode"
flat = false
script/script = ExtResource( 4 )

[node name="SpeedrunMode" type="Button" parent="MenuContainer"]

rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../ArcadeMode")
focus_neighbour/bottom = NodePath("../Options")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 228.0
margin/right = 338.0
margin/bottom = 271.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.282353, 0.262745, 0.341176, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Speedrun Mode"
flat = false
script/script = ExtResource( 4 )

[node name="Options" type="Button" parent="MenuContainer"]

rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../SpeedrunMode")
focus_neighbour/bottom = NodePath("../QuitGame")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 304.0
margin/right = 338.0
margin/bottom = 347.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
script/script = ExtResource( 4 )

[node name="QuitGame" type="Button" parent="MenuContainer"]

rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../Options")
focus_neighbour/bottom = NodePath("../Continue")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 380.0
margin/right = 338.0
margin/bottom = 423.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit Game"
flat = false
script/script = ExtResource( 4 )

[node name="Logo" type="Sprite" parent="."]

transform/pos = Vector2( 960, 302 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 1024.0
margin/right = 1916.0
margin/bottom = 1061.0
custom_fonts/font = ExtResource( 6 )
text = "Game and Art by: Daniel Queiroz Porto          Music by: Sam Oz"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="MenuContainer/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="MenuContainer/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="MenuContainer/ArcadeMode" to="." method="_on_ArcadeMode_pressed"]

[connection signal="pressed" from="MenuContainer/SpeedrunMode" to="." method="_on_SpeedrunMode_pressed"]

[connection signal="pressed" from="MenuContainer/Options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="MenuContainer/QuitGame" to="." method="_on_quit_pressed"]


